--- a/webpay-token/src/main/res/values/strings.xml
+++ b/webpay-token/src/main/res/values/strings.xml
@@ -12,8 +12,12 @@
     <string name="card_send">Pay with card</string>
     <string name="card_we_accept">We accept</string>
 
+    <string name="field_error_default">Incorrect. Check the card again.</string>
+    <string name="field_expiry_hint">MM / YYYY</string>
+    <string name="field_name_hint">TARO YAMADA</string>
+    <string name="field_number_hint">1234 5678 9012 3456</string>
+
     <string name="token_fragment_open_dialog">Pay with card</string>
-    <string name="error_title">Failed to register payment info</string>
     <string name="tokenize_error_title">Failed to register payment information</string>
     <string name="tokenize_error_message">This application unexpectedly failed to save your payment information. Please retry and contact the developer if still fails.</string>
 </resources>
