--- a/webpay-token/src/main/res/values/strings.xml
+++ b/webpay-token/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="card_expiry_separator">/</string>
     <string name="card_name">Name</string>
     <string name="card_number">Number</string>
+    <string name="card_number_type_icon_description">Brand of this number</string>
     <string name="card_payment_info_title">Payment info</string>
     <string name="card_send">Pay with card</string>
     <string name="card_we_accept">We accept</string>
