--- a/webpay-token/src/main/res/values/strings.xml
+++ b/webpay-token/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- dialog_card layout -->
     <string name="card_cancel">Cancel</string>
     <string name="card_cvc">CVC</string>
+    <string name="card_cvc_help_description">Show help image indicating CVC location</string>
     <string name="card_expiry">Expiry</string>
     <string name="card_expiry_separator">/</string>
     <string name="card_name">Name</string>
