--- a/webpay-token/src/main/res/values/strings.xml
+++ b/webpay-token/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="field_number_hint">1234 5678 9012 3456</string>
 
     <string name="token_fragment_open_dialog">Pay with card</string>
+    <string name="token_fragment_token_generated">Payment info provided</string>
     <string name="tokenize_error_title">Failed to register payment information</string>
     <string name="tokenize_error_message">This application unexpectedly failed to save your payment information. Please retry and contact the developer if still fails.</string>
 </resources>
