--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="token_generated">Generated token id: %1$s</string>
     <string name="token_cancelled">You cancelled purchasing: %1$s</string>
     <string name="action_settings">Settings</string>
+    <string name="use_card_io">Use Card.io instead</string>
+    <string name="card_io_cancelled">You cancelled card.io, try WebPay\'s UI.</string>
 
 </resources>
