Adjust style, layout

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="no_token">Token is not generated yet</string>
     <string name="token_generated">Generated token id: %1$s</string>
     <string name="token_cancelled">You cancelled purchasing: %1$s</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_info">Information</string>
     <string name="use_card_io">Use Card.io instead</string>
     <string name="card_io_cancelled">You cancelled card.io, try WebPay\'s UI.</string>
 
