--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -5,7 +5,11 @@
 
     <string name="label_sample_list">Samples using webpay-token</string>
     <string name="label_token_create">Use form and button</string>
+    <string name="label_card_dialog">Use only form</string>
     <string name="label_card_io_integration">Integrate with card.io</string>
+
+    <string name="button_own">Button implemented by you</string>
+    <string name="button_submit">Complete to input your payment</string>
 
     <string name="no_token">Token is not generated yet</string>
     <string name="token_generated">Generated token id: %1$s</string>
