--- a/sample/src/main/res/values-ja/strings.xml
+++ b/sample/src/main/res/values-ja/strings.xml
@@ -10,7 +10,7 @@
     <string name="label_card_io_integration">通信ライブラリとcard.ioを組み合わせる</string>
 
     <string name="button_own">独自に実装したボタン</string>
-    <string name="button_submit">カード情報の入力を完了する</string>
+    <string name="button_submit">入力を完了する</string>
 
     <string name="no_token">トークンは作成されていません</string>
     <string name="token_generated">トークンが作成されました: %1$s</string>
